It has taken me a long time for me to be able to upload my own local files into the CSS where the background goes. I finally! found out how to do it and a way which works. I found this site helped, https://teamtreehouse.com/community/css-external-stylesheet-and-background-image. I have also put this link next to the first image which I have tried this on. I have also made the first image for the parallax scroll which is the foundations at the moment it doesn't fit into the box I have tried to make it smaller but this didn't work I don't think, I tried clearing the cache and changing the image size as well so maybe the issue is with the menu bar I am going to look into that now.

--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -261,7 +261,7 @@ section.module.parallax h1 {
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 section.module.parallax-1 {
-  background-image: url("http://onehdwallpaper.com/wp-content/uploads/2015/07/Free-Download-Sea-View-Pic.jpeg");
+  background-image: url(../images/parallax1.jpg);  /*This is one of the sites which helped with the images https://teamtreehouse.com/community/css-external-stylesheet-and-background-image*/ /*background-image: url("http://onehdwallpaper.com/wp-content/uploads/2015/07/Free-Download-Sea-View-Pic.jpeg");*/
 }
 section.module.parallax-2 {
   background-image: url("http://www.planwallpaper.com/static/images/new-wallpaper-161.jpg");
